oxiplate-derive/tests/config/expected/double-table.stderr
error: Failed to parse `/oxiplate.toml`: `escaper_groups` is already set
 --> tests/broken/double-table.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Oxiplate` (in Nightly builds, run with -Z macro-backtrace for more info)
